# comfortablebinding

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  a.out  avgphasediffcomp.py  conf.toml  doxygen.conf  dynamic.toml  eee.spv  eigvals.txt  grapheneconf.toml  hexconf.toml  inspect_kuramoto.py  kitespec.toml  kuramoto.conf  largemonotilegrid.txt  main0.cpp.bak  makechain.py  makesquare.py  maketetrille.py  monotilegrid.txt  montilegrid.txt  mymonopts.txt  penrose711.txt  plotenergies.py  plotpotential.py  profile  quickvis.py  rindepth.py  rscanplots.py  rtimescan.py  sample.tcl  sample_monopts.txt  sdf.cpp  sdfconf.toml  smallmonotilegrid.txt  square100.txt  square225.txt  (+9 more)
gögn/: monotile100scalescan.h5  monotile150scalescan.h5  monotile198scalescan.h5  monotile225scalescan.h5  monotile259scalescan.h5  monotile400scalescan.h5  monotile404scalescan.h5  tetrille183scalescan.h5  tetrille201dscalescan.h5  tetrille303scalescan.h5  tetrille305dscalescan.h5  tetrille462dscalescan.h5  tetrille462scalescan.h5
include/: SDF.h  approximant.h  colormaps.h  colormaps.hpp  dynamic.h  dynamic.hpp  geometry.h  hack.hpp  hermEigen.h  io.h  kdtree.h  localtomlpp.h  logging.hpp  mathhelpers.h  metaprogramming.h  periodic.h  typedefs.h  vkcore.h  vkcore.hpp  vkhelpers.hpp
punktar/: bigtetrille.h5  chain1000couplings.h5  hexgrid.txt  mono1009couplings.h5  monotile1071pts.txt  monotile150.txt  monotile150couplings.h5  monotile198couplings.h5  monotile259.txt  monotile259couplings.h5  monotile404.txt  monotile404couplings.h5  monotilecouplings.h5  smalltetrille.h5  square100couplings.h5  square225couplings.h5  square400couplings.h5  tetrille183couplings.h5  tetrille201dcouplings.h5  tetrille302couplings.h5  tetrille303couplings.h5  tetrille305dcouplings.h5  tetrille309.txt  tetrille462couplings.h5  tetrille462dcouplings.h5
punktar/monopts/: mono1009ptscm.txt  mono1009ptsrm.txt  mono105ptsrm.txt  mono223ptscm.txt  mono223ptsrm.txt  mono330ptscm.txt  mono330ptsrm.txt  mono518ptscm.txt  mono518ptsrm.txt  monofull1084.txt  monofull180.txt  monofull38.txt  monofull7047.txt
shaders/: add.slang  colormap.slang  complex.slang  disp.slang  drivendiss.slang  esection.comp  esection.slang  firstminmax.slang  gpe.slang  minmax.slang  parsum.slang  quad.slang  schroedstep.slang  shader.slang  sparse.comp  sparse.slang  test.slang  xfer.slang
src/: SDF.cpp  coupledosc.cpp  couplingmaker.cpp  dynamic.cpp  geometry.cpp  hermEigen.cpp  io.cpp  localtomlpp.cpp  main.cpp  main.cpp.bak  makemonotile.cpp  periodic.cpp  sim2d.cpp  test.cpp  visual.cpp  vkcore.cpp  vkhelpers.cpp  vma_impl.cpp
